nexus3/base/nexus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: nexus3
  name: nexus3
spec:
  ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: nexus3
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
