nexus3/base/nexus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
  labels:
    app: nexus
  name: nexus
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: nexus
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
